--- a/index.html
+++ b/index.html
@@ -1692,7 +1692,7 @@
                                 <span className="material-symbols-outlined">more_vert</span>
                             </button>
                         </header>
-                        <main className="flex-1 flex flex-col overflow-y-auto no-scrollbar pb-32 px-5">
+                        <main className="min-h-0 flex-1 flex flex-col overflow-y-auto no-scrollbar pb-32 px-5">
                             <div className="mt-3 mb-2">
                                 <div className="flex justify-between items-end px-1 mb-2">
                                     <span className="text-[11px] font-semibold text-primary/80 uppercase tracking-wider">결과 단계</span>
